<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_names">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:translationX="20dp"
        android:translationY="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/player_one_name"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:hint="@string/enter_player_1_name"
            android:inputType="text"
            android:autofillHints="p1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/player_two_name"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:hint="@string/enter_player_2_name"
            android:inputType="text"
            android:autofillHints="p2" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="320dp"
            android:layout_height="87dp"
            android:text="@string/start_game" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>