<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layoutDirection="inherit"
    android:background="@android:color/holo_blue_light"
    tools:context=".user_names">

    <Button
        android:id="@+id/back_button_bot"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:translationX="20dp"
        android:translationY="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenger"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/player_one_name"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:hint="@string/enter_challenger_name"
            android:inputType="text"
            android:autofillHints="player" />

        <Switch
            android:id="@+id/aggr_switch"
            android:layout_width="185dp"
            android:layout_height="124dp"
            android:text="@string/aggressive_bot"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/start_game"
            android:layout_width="320dp"
            android:layout_height="87dp"
            android:text="@string/start_game" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>