<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:srcCompat="@drawable/mainpic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:text="@string/new_game"/>

        <Button
            android:id="@+id/load_game"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:text="@string/load_game" />

        <Button
            android:id="@+id/leaderboard"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/leaderboard" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>